fixed connect tab text overlap

--- a/styles/Home/connect.module.scss
+++ b/styles/Home/connect.module.scss
@@ -7,7 +7,8 @@
     position: relative;
     .container{
       width: 80%;
-      height: 400px;
+      height: 500px;
+      margin-bottom: 2rem;
       gap: 1rem;
       h1{
         font-size: 3rem;
